# xjadeo

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  buildmac.sh  configure.ac  release.sh  x-mac-arm-build.sh  x-osx-buildstack.sh  x-osx-bundle.sh  x-pbuildstatic.sh  x-static.sh  x-win-bundle.sh  x-win-pbuild.sh  x-win32.sh  xjadeo.1  xjadeo.lsm.in  xjadeo.spec.in
contrib/: README  encode.sh  xjadeo-example.avi  xjremote-osc
contrib/Jadeo.app/Contents/: Info.plist  PkgInfo
contrib/Jadeo.app/Contents/MacOS/: Jadeo
contrib/Jadeo.app/Contents/Resources/: Jadeo.icns
contrib/cli-remote/: Makefile.am  README  jadeo.c
contrib/jadio/: Makefile  README  jack.c  jadio.c
contrib/nsi/: xjadeo.nsi.tpl
contrib/osc-remote/: Makefile  README  osc.c  osceo.c  vctl-osc.pd
contrib/pkg-osx/: Jadeo.icns  wrapper.sh
contrib/pkg-win/: xjadeo.nsi.tpl
contrib/tsmm/: Makefile.am  README  timestampmoviemaker.sh  tsmm.c  tsmm.pl
debian/: changelog  control  copyright  rules  watch
doc/: Makefile  README_DOC  html.xsl  man.xsl  qjadeo.1  qjadeo.eps  remotedoc.sh  style.css  xjadeo.1  xjadeo.eps  xjadeo.xml  xjadeorc  xjinfo.1  xjremote.1
doc/pages/: addons.html  building.html  download.html  index.html  main.html  osc.html  remote.html  whatsnew.html
doc/static/: lightbox.css  style.css
doc/static/js/: hover.js
doc/tpl/: epage  foot  front  head  page
src/: Makefile.am  xjadeo.h
src/qt-gui/: Makefile.am  importdialog.cpp  importdialog.h  importdialog.ui  importdialog.ui.h  importprogress.cpp  importprogress.h  importprogress.ui  importprogress.ui.h  mainwindow.ui  prefdialog.cpp  prefdialog.h  prefdialog.ui  prefdialog.ui.h  qjadeo.cpp  qjadeo.h  qjadeo.pro.in  qjadeo.qrc  qjadeo.rc  qjadeo_cs.ts  qjadeo_el_GR.ts  qjadeo_fr.ts  qjadeo_ru.ts
src/xjadeo/: Makefile.am  avinfo.c  avinfo.dtd  common.c  common_jack.c  configfile.c  display.c  display.h  display_gl_common.h  display_gl_osx.m  display_gl_win.c  display_glx.c  display_gtk.c  display_mac.c  display_sdl.c  display_x11.c  display_x_dialog.c  display_x_dnd.c  ffcompat.h  freetype.c  gtime.c  gtime.h  homography.h  jack.c  lash.c  libsofd.c  ltc-jack.c  main.c  midi.c  mqueue.c  remote.c  remote.h  smpte.c  weak_libjack.c  weak_libjack.h  windows.rc  xjadeo-color.xpm  xjadeo.bitmap  xjadeo.c  xjadeo.h  (+4 more)
src/xjadeo/icons/: README  brightness.bitmap  brightness_mask.xbm  contrast.bitmap  contrast_mask.xbm  gamma.bitmap  gamma_mask.xbm  hue.bitmap  hue_mask.xbm  osd_bitmaps.h  saturation.bitmap  saturation_mask.xbm  splash.bitmap  splash_mask.xbm  xjadeo-color-ico.h  xjadeo-color.xpm  xjadeo8.xpm  xjadeo8_ico.h  xjadeoH.h
