AC_AUX_DIR = m4
AC_MACRO_DIR = m4

SUBDIRS = src @ac_contrib_dir@

man_MANS = doc/xjadeo.1 doc/qjadeo.1 doc/xjremote.1

EXTRA_DIST= \
 xjadeo.lsm.in doc/xjadeo.png \
 doc/xjadeo.xml doc/favicon.ico doc/Makefile doc/html.xsl doc/man.xsl \
 doc/xjadeo.1 doc/qjadeo.1 doc/xjremote.1 \
 src/xjadeo/icons/osd_bitmaps.h \
 src/xjadeo/icons/xjadeo-color.xpm \
 src/xjadeo/icons/splash.bitmap src/xjadeo/icons/splash_mask.xbm \
 src/xjadeo/icons/brightness.bitmap src/xjadeo/icons/brightness_mask.xbm \
 src/xjadeo/icons/contrast.bitmap src/xjadeo/icons/contrast_mask.xbm \
 src/xjadeo/icons/gamma.bitmap src/xjadeo/icons/gamma_mask.xbm \
 src/xjadeo/icons/hue.bitmap src/xjadeo/icons/hue_mask.xbm \
 src/xjadeo/icons/saturation.bitmap src/xjadeo/icons/saturation_mask.xbm \
 src/xjadeo/icons/xjadeo-color.ico src/xjadeo/icons/xjadeo-color-ico.h \
 doc/xjadeorc \
 contrib/cli-remote/jadeo.c \
 contrib/cli-remote/Makefile.am \
 contrib/cli-remote/README \
 contrib/xjadeo-example.avi \
 contrib/README

MAINTAINERCLEANFILES = \
 Makefile.in \
 aclocal.m4 \
 compile \
 config.guess \
 config.h.in \
 config.sub \
 configure \
 depcomp \
 install-sh \
 Makefile.in \
 missing
