AC_AUX_DIR = m4
AC_MACRO_DIR = m4

SUBDIRS = src @ac_contrib_dir@

man_MANS = doc/xjadeo.1 doc/xjremote.1

EXTRA_DIST= \
 xjadeo.lsm.in \
 doc/xjadeorc \
 doc/Makefile doc/xjadeo.1 doc/xjremote.1 \
 \
 src/xjadeo/icons/osd_bitmaps.h \
 src/xjadeo/icons/brightness.bitmap src/xjadeo/icons/brightness_mask.xbm \
 src/xjadeo/icons/contrast.bitmap src/xjadeo/icons/contrast_mask.xbm \
 src/xjadeo/icons/gamma.bitmap src/xjadeo/icons/gamma_mask.xbm \
 src/xjadeo/icons/hue.bitmap src/xjadeo/icons/hue_mask.xbm \
 src/xjadeo/icons/saturation.bitmap src/xjadeo/icons/saturation_mask.xbm \
 \
 src/xjadeo/icons/xjadeo8.ico src/xjadeo/icons/xjadeo8_ico.h \
 src/xjadeo/icons/xjadeoH.ico src/xjadeo/icons/xjadeoH.h \
 src/xjadeo/icons/xjadeo8.xpm src/xjadeo/icons/xjadeoH128.png \
 src/xjadeo/icons/xjadeo_win.ico \
 src/xjadeo/fonts/ArdourMono.ttf \
 \
 contrib/cli-remote/jadeo.c \
 contrib/cli-remote/Makefile.am \
 contrib/cli-remote/README \
 \
 contrib/xjadeo-example.mp4

MAINTAINERCLEANFILES = \
 Makefile.in \
 aclocal.m4 \
 compile \
 config.guess \
 config.h.in \
 config.sub \
 configure \
 depcomp \
 install-sh \
 Makefile.in \
 missing
